# XPolicyLab

./: .gitignore  .gitmodules  README.md  RUNTIME_AUDIT.md  clone_demo_tutorial.sh  debug_env_client.py  debug_policy_env.py  debug_policy_env_batch.py  model_template.py  pyproject.toml  setup_policy_server.py
ACT/: .gitignore  SIM_TASK_CONFIGS.json  constants.py  deploy.py  deploy.yml  eval.sh  imitate_episodes.py  model.py  process_data.sh  train.sh
DP/: deploy.py  deploy.yml  eval.sh  install.sh  model.py  process_data.sh  train.py  train.sh
client_server/: __init__.py  client_server_utils.py
demo_policy/: deploy.py  eval.sh  model.py
env_cfg/: aloha-agilex.yml
move_point_policy/: deploy.py
real_env/: AGENTS.md  README.md  __init__.py  constants.py  helpers.py  layout_shot.py  real_env_client.py  recorder.py  run.sh  run_real_env_workbench.py  workbench.py
replay_policy/: your_policy.py
robodojo/: artifacts.py  env_client.py  eval_runner.py  executor_server.py  policy_server.py  s3_upload.py  schemas.py  webhook.py
scripts/: download_data.sh  download_demo_data.sh  download_robodojo_data.sh  setup_eval_checkpoint_symlinks.sh  verify_deploy_manual_seq.sh
tests/: robodojo_fixtures.py  test_orbbec_multi_sensor_cleanup.py  test_piper_controller_cleanup.py  test_real_env_action_validation.py  test_real_env_finish_episode.py  test_robodojo_artifacts.py  test_robodojo_client.py  test_robodojo_codec.py  test_robodojo_env_client.py  test_robodojo_env_client_api.py  test_robodojo_env_client_mapping.py  test_robodojo_env_client_runner.py  test_robodojo_messages.py  (+13 more)
(+1179 files in other folders)
