[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xpolicylab"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pyyaml>=6",
    "opencv-python-headless>=4.8",
    "h5py>=3.8",
]

[project.optional-dependencies]
robodojo = [
    "websockets>=13.0",
    "msgpack>=1.0.8",
    "msgpack-numpy>=0.4.8",
    "pydantic>=2.5",
    "boto3>=1.34",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools]
py-modules = ["XPolicyLab"]

[tool.setuptools.packages.find]
where = ["."]
include = ["client_server*", "utils*", "robodojo*"]
exclude = ["policy*", "build*", "scripts*", "__pycache__*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
